--- a/ci-stevonnie.yml
+++ b/ci-stevonnie.yml
@@ -7,6 +7,10 @@ variables:
   gce_project_id: "{{ env `GCE_PROJECT_ID` }}"
   image_name: travis-ci-stevonnie-xenial-{{ timestamp }}-<%= git_desc %>
   openstack_source_image_name: "{{ env `OS_SOURCE_IMAGE_XENIAL` }}"
+  os_user_domain_name: "{{ env `OS_USER_DOMAIN_NAME` }}"
+  os_ssh_user: "{{ env `OS_SSH_USER` }}"
+  os_ssh_key: "{{ env `OS_SSH_KEY` }}"
+  os_ssh_key_path: "{{ env `OS_SSH_KEY_PATH` }}"
   travis_cookbooks_branch: "{{ env `TRAVIS_COOKBOOKS_BRANCH` }}"
   travis_cookbooks_edge_branch: master
   travis_cookbooks_sha: "{{ env `TRAVIS_COOKBOOKS_SHA` }}"
@@ -50,21 +54,21 @@ builders:
   - --storage-opt=size=11G
   - "{{ .Image }}"
   - /sbin/init
-  commit: true
+  export_path: "stevonnie-image.tar"
 - type: openstack
   name: openstack
   flavor: m1.large
   insecure: true
   image_name: "{{ user `image_name` }}"
-  ssh_username: ubuntu
+  ssh_username: "{{ user `os_ssh_user` }}"
+  ssh_keypair_name: "{{ user `os_ssh_key` }}"
+  ssh_private_key_file: "{{ user `os_ssh_key_path`}}"
+  domain_name: "{{ user `os_user_domain_name`}}"
   networks:
   <% ENV['OS_NETWORKS'].to_s.split(',').map(&:strip).each do |network| %>
   - <%= network %>
   <% end %>
   source_image_name: "{{ user `openstack_source_image_name` }}"
-  availability_zone: "{{ user `openstack_zone` }}"
-  ssh_keypair_name:  "{{ user `openstack_key_name` }}"
-  ssh_private_key_file: "{{ user `openstack_key_path`  }}"
 provisioners:
 - type: shell
   inline: sleep 10
@@ -80,9 +84,9 @@ provisioners:
   pause_before: 5s
   only:
   - docker
-- type: file
-  source: tmp/git-meta
-  destination: /var/tmp/git-meta
+# - type: file
+#   source: tmp/git-meta
+#   destination: /var/tmp/git-meta
 - type: file
   source: packer-assets/ubuntu-xenial-normal-purge.txt
   destination: /var/tmp/purge.txt
@@ -152,7 +156,7 @@ provisioners:
   - packer-scripts/ensure-travis-user
   - packer-scripts/purge
   - packer-scripts/disable-apparmor
-  - packer-scripts/run-serverspecs
+# - packer-scripts/run-serverspecs
   - packer-scripts/test-system-info-output
   - packer-scripts/dump-dpkg-manifest
   - packer-scripts/create-bin-lib-checksums
@@ -175,18 +179,18 @@ provisioners:
   destination: tmp/image-metadata-{{ user `image_name` }}.tar.bz2
   direction: download
 post-processors:
--
-  - type: docker-tag
-    repository: "{{ user `docker_repository` }}"
-    tag: "{{ user `docker_tag` }}"
-    only:
-    - docker
-  - type: shell-local
-    scripts: bin/docker-push
-    environment_vars:
-    - DOCKER_DEST={{ user `docker_repository` }}:{{ user `docker_tag` }}
-    only:
-    - docker
+# -
+#   - type: docker-tag
+#     repository: "{{ user `docker_repository` }}"
+#     tag: "{{ user `docker_tag` }}"
+#     only:
+#     - docker
+#   - type: shell-local
+#     scripts: bin/docker-push
+#     environment_vars:
+#     - DOCKER_DEST={{ user `docker_repository` }}:{{ user `docker_tag` }}
+#     only:
+#     - docker
 -
   - type: shell-local
     script: bin/job-board-register
@@ -194,12 +198,12 @@ post-processors:
     - IMAGE_NAME={{ user `image_name` }}
     only:
     - googlecompute
-  - type: shell-local
-    script: bin/job-board-register
-    environment_vars:
-    - IMAGE_NAME={{ user `docker_repository` }}:{{ user `docker_tag` }}
-    only:
-    - docker
+#   - type: shell-local
+#     script: bin/job-board-register
+#     environment_vars:
+#     - IMAGE_NAME={{ user `docker_repository` }}:{{ user `docker_tag` }}
+#     only:
+#     - docker
 -
   - type: shell-local
     script: bin/write-latest-image-name
